--- a/P003306.opf/meta.yml
+++ b/P003306.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P003306
+id: P003306
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG26091
   title: མ་བཅོས་དངོས་འབྲེལ་བརྗོད་པ་དུས་ཀྱི་མེ་ལྕེ།
-  volume: ''
   author: ''
+  volumes: {}
