--- a/P003306.opf/meta.yml
+++ b/P003306.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1KG26091
   title: མ་བཅོས་དངོས་འབྲེལ་བརྗོད་པ་དུས་ཀྱི་མེ་ལྕེ།
   author: ''
-  volumes: {}
+  volumes:
+    cc60d33032054d22997c0ce4c70a01c7:
+      image_group_id: I1KG26316
+      title: ''
+      volume_number: 1
+      total_pages: 160
