--- a/P003306.opf/layers/v001/Pagination.yml
+++ b/P003306.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 2a2c8eb32d244374a97afc86967bb690
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   01b6fed14c8547edbefd991d0bbef123:
